--- a/index.html
+++ b/index.html
@@ -5,18 +5,10 @@
     <title>Special Guest</title>
   </head>
   <body>
-    <img id='pic' src='pic1.png' />
-    <button onclick="document.getElementById('pic').src='pic2.png'"
-      style="background-color: #4CAF50;
-          color: white;
-          width: 600px;
-          height: 200px;
-          padding: 15px 15px;
-          text-align: center;
-          display: flex-box;
-          font-size: 16px;"
-      >
-      <h1>Who is it??</h1>
-    </button>
+    <img id='pic' src='pic1.png'
+      style="width:100%;height:100%;"
+      onclick="document.getElementById('pic').src='pic2.png'"
+      alt='pokemon'
+    />
   </body>
 </html>
