--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <html>
   <head>
     <title>Special Guest</title>
+    <meta http-equiv="refresh" content="5;url=https://www.youtube.com/watch?v=dQw4w9WgXcQ" />
   </head>
   <body>
     <img id='pic' src='pic1.png'
-      style="width:100%;height:100%;"
+      style="width:100%;height:inherit;"
       onclick="document.getElementById('pic').src='pic2.png'"
       alt='pokemon'
     />
