This is now a test repo lol

--- a/index.html
+++ b/index.html
@@ -1,15 +1,29 @@
 <!DOCTYPE html>
 
 <html>
-  <head>
-    <title>Special Guest</title>
-    <meta http-equiv="refresh" content="5;url=https://www.youtube.com/watch?v=dQw4w9WgXcQ" />
-  </head>
+  <title>Sail Magazine</title>
+  <style>
+    html {
+      width: 100%;
+      height: 100%;
+    }
+
+    body {
+      width: 100%;
+      height: 100%;
+    }
+
+    #frame {
+      margin: 0;
+      padding: 0;
+      border: none;
+      width: 100%;
+      height: 100%;
+    }
+  </style>
   <body>
-    <img id='pic' src='pic1.png'
-      style="width:100%;height:inherit;"
-      onclick="document.getElementById('pic').src='pic2.png'"
-      alt='pokemon'
-    />
+    <iframe id="frame"
+      src="https://sailmagatvic.wordpress.com/">
+    </iframe>
   </body>
 </html>
